# autoscraper

./: pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
autoscraper/: auto_scraper.py  utils.py
tests/: conftest.py
