[project]
name = "autoscraper"
version = "2.0.0"
description = "A Smart, Automatic, Fast and Lightweight Web Scraper for Python"
requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]
#
#[build-system]
#requires = ["setuptools>=42.0"]
#build-backend = "setuptools.build_meta"
